--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: flex-end;
     gap: 4px;
-    padding: 16px;
+    padding: 16px 24px;
   }
   & .logo {
     order: 1;
@@ -52,5 +52,21 @@
         transform: translateY(-50%);
       }
     }
+  }
+}
+
+.container {
+  padding: 40px 0;
+}
+.row {
+  > *:hover img {
+    transform: scale(1.1);
+  }
+}
+.image-wrapper {
+  overflow: hidden;
+
+  & img {
+    transition: all 0.25s ease-out;
   }
 }
