--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,28 @@
+:root {
+  --transition-common: all 0.25s ease-out;
+}
+
 .nav-bar-wrapper {
   display: flex;
   flex-direction: column;
 
   & .login-button {
+    width: max-content;
     order: 0;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     gap: 4px;
-    padding: 16px 24px;
+    padding: 8px 12px;
+    margin: 8px 12px 8px auto;
     cursor: pointer;
+    text-decoration: none;
+    color: inherit;
+    transition: var(--transition-common);
+
+    &:hover {
+      color: gray;
+    }
   }
   & .logo {
     order: 1;
@@ -69,6 +82,17 @@
   overflow: hidden;
 
   & img {
-    transition: all 0.25s ease-out;
+    transition: var(--transition-common);
   }
+}
+
+.login-kakao {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  background: #fee500;
+  color: #191919;
+  width: 240px;
+  padding: 8px;
 }
