[feat] Formik, Yup 사용으로 로그인 검증

--- a/src/App.css
+++ b/src/App.css
@@ -86,13 +86,8 @@
   }
 }
 
-.login-kakao {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 8px;
+.btn-kakao {
   background: #fee500;
   color: #191919;
-  width: 240px;
-  padding: 8px;
+  padding: 12px;
 }
