[style] Login 페이지 wrapper 추가

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,8 @@
 
     & .menu-list {
       display: flex;
+      margin-bottom: 0;
+      padding-left: 0;
 
       & li {
         padding: 16px;
@@ -70,9 +72,6 @@
   }
 }
 
-.container {
-  padding: 40px 0;
-}
 .row {
   > *:hover img {
     transform: scale(1.1);
