--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,12 @@ a {
 .bdrs-0 {
   border-radius: 0 !important;
 }
+
+.container {
+  padding: 40px 0;
+}
+
+.login-wrapper {
+  max-width: 320px;
+  margin: 40px auto 0;
+}
