--- a/src/App.css
+++ b/src/App.css
@@ -125,3 +125,37 @@
     color: #b7000d;
   }
 }
+
+.dropdown-wide {
+  border-bottom: 0.5px solid gray;
+}
+
+#dropdown-common {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 0.75rem;
+  padding: 10px;
+
+  &.show,
+  &:active,
+  &:focus {
+    border: 0 !important;
+  }
+
+  &::after {
+    display: none !important;
+  }
+
+  & + .dropdown-menu.show {
+    width: 100%;
+    border: 0;
+    border-radius: 0;
+    border-bottom: 0.5px solid gray;
+
+    & a.dropdown-item {
+      font-size: 0.75rem !important;
+    }
+  }
+}
