--- a/src/App.css
+++ b/src/App.css
@@ -4,37 +4,14 @@
 
 .nav-bar-wrapper {
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  font-size: 0.75rem;
 
-  & .login-button {
-    width: max-content;
-    order: 0;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 4px;
-    padding: 8px 12px;
-    margin: 8px 12px 8px auto;
-    cursor: pointer;
-    text-decoration: none;
-    color: inherit;
-    transition: var(--transition-common);
-
-    &:hover {
-      color: gray;
-    }
-  }
-  & .logo {
-    width: max-content;
-    margin: 0 auto;
-    order: 1;
-  }
   & .menu-area {
-    order: 2;
+    width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    gap: 16px;
 
     & .menu-list {
       display: flex;
@@ -44,28 +21,60 @@
       & li {
         padding: 16px;
         text-transform: uppercase;
+        cursor: pointer;
+        color: gray;
+        font-weight: 100;
+
+        &:hover {
+          color: #000;
+        }
       }
     }
 
-    & .search-wrap {
-      width: max-content;
+    & .icons-wrap {
       display: flex;
       align-items: center;
-      gap: 4px;
-      border-bottom: 0.5px solid #000;
-      position: relative;
+      margin-right: 24px;
 
-      & input {
-        width: calc(100% - 48px);
-        padding: 8px;
+      & .search-wrap {
+        width: max-content;
+        height: fit-content;
+        display: flex;
+        align-items: center;
+        gap: 4px;
+        border-bottom: 0.5px solid #000;
+        position: relative;
+
+        & input {
+          width: calc(100% - 48px);
+          padding: 8px;
+          font-weight: 300;
+        }
+
+        & .fa-xmark {
+          cursor: pointer;
+          position: absolute;
+          right: 0;
+          top: 50%;
+          transform: translateY(-50%);
+        }
       }
-
-      & .fa-xmark {
+      & .login-button {
+        width: max-content;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        gap: 4px;
+        padding: 8px 12px;
+        margin: 8px 12px 8px auto;
         cursor: pointer;
-        position: absolute;
-        right: 0;
-        top: 50%;
-        transform: translateY(-50%);
+        text-decoration: none;
+        color: inherit;
+        transition: var(--transition-common);
+
+        &:hover {
+          color: gray;
+        }
       }
     }
   }
